kubernetes/api/ingress-tls.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: bring-it
  namespace: bring-it
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - bring-it.thuault.com
    secretName: bring-it-tls
  rules:
  - host: bring-it.thuault.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: 8080
